--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
+#root {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .chats__title{
     padding: 10px 0px;
 
@@ -23,18 +29,95 @@
     display: none;
 }
 
-.chats__nav--sidebar{
+.chats__nav--sidebar {
     padding: 0px 15px;
     align-self: flex-start;
 }
 
-.chats__nav--title{
+.chats__nav--title {
     flex: 1;
     display: flex;
     justify-content: center;
 }
 
+.chats__container {
+    height: 100vh;
+
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
+    background-color: #f1f2f6;
+}
+
+.chats__profile {
+    padding: 5px 0px;
+
+    display: flex;
+    justify-content: center;
+    font-size: 26px;
+    font-weight: 700;
+}
+
+.chats__messages {
+    flex: 1;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    overflow-y: auto;
+}
+
+
+.chats__input {
+    display: flex;
+}
+
+.chats__empty {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.chats__empty--content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chats__messages::-webkit-scrollbar {
+    width: 8px;
+}
+
+.chats__messages::-webkit-scrollbar-track {
+    background: #e0e0e0; 
+    border-radius: 4px;
+}
+
+.chats__messages::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+.chats__messages::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
 @media screen and (max-width: 768px) {
+
+    #root {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+
     .chats__sidebar {
         display: none;
         width: 100vw;
@@ -49,5 +132,11 @@
         font-weight: 500;
         color: white;
         background-color: var(--primary-color);
+    }
+
+    .chats__container {
+        /* flex: 1; */
+        height: 100vh;
+        background-color: #f1f2f6;
     }
 }
