--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 #root {
     display: flex;
     flex-direction: row;
-    justify-content: center;
 }
 
 .chats__title{
@@ -23,6 +22,11 @@
     flex-direction: column;
 
     background-color: var(--primary-color);
+}
+
+.chats__body {
+    height: 100vh;
+    flex:  1;
 }
 
 .chats__nav {
@@ -69,7 +73,6 @@
     overflow-y: auto;
 }
 
-
 .chats__input {
     display: flex;
 }
@@ -110,17 +113,20 @@
     background-color: #555;
 }
 
+.toggle__sidebar {
+    width: 250px !important;
+    display: flex !important;
+}
+
 @media screen and (max-width: 768px) {
 
     #root {
-        height: 100vh;
         display: flex;
-        flex-direction: column;
     }
 
     .chats__sidebar {
         display: none;
-        width: 100vw;
+        position: absolute;
     }
 
     .chats__nav {
@@ -135,8 +141,6 @@
     }
 
     .chats__container {
-        /* flex: 1; */
-        height: 100vh;
         background-color: #f1f2f6;
     }
 }
