feat: fixed responsive issue

--- a/frontend/src/routes/register/style.css
+++ b/frontend/src/routes/register/style.css
@@ -1,6 +1,7 @@
 .register__main--outter {
     height: 100vh;
     
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
