--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,6 +24,25 @@
     background-color: var(--primary-color);
 }
 
+.groups {
+    display: flex;
+    justify-content: center;
+
+    color: white;
+}
+
+.groups__create {
+    padding: 5px 10px;
+
+    display: flex;
+    gap: 5px;
+    border-radius: 50px;
+}
+
+.groups__create:hover {
+    background-color: #92a8ffad;
+}
+
 .chats__body {
     height: 100vh;
     flex:  1;
@@ -116,6 +135,54 @@
 .toggle__sidebar {
     width: 250px !important;
     display: flex !important;
+}
+
+.groupCreate__dialog {
+    padding: 25px 20px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 18px;
+    
+    border-radius: 3px;
+    background-color: white;
+}
+
+.groupCreate__dialog--content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+}
+
+.groupCreate__dialog--title {
+    font-size: 1.6rem;
+    font-weight: 500;
+}
+
+.groupCreate__dialog--input input {
+    width: 200px;
+    padding: 5px 10px;
+    
+    font-size: 1.4rem;
+
+    border: 1px solid #000;
+    border-radius: 4px;
+    outline: none;
+}
+
+.groupCreate__dialog--button button{
+    padding: 5px 20px;
+
+    
+    border: none;
+    border-radius: 4px;
+    background-color: var(--primary-color);
+    color: #fff;
+    font-size: 1.6rem;
+
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
